Menu: fix search bgd in dark mode

--- a/presenters/menu/style.less
+++ b/presenters/menu/style.less
@@ -14,7 +14,7 @@
 	overflow: hidden;
 
 	> header {
-		padding: .5em;
+		padding: 1em;
 		padding-bottom: 0;
 	}
 
@@ -48,6 +48,7 @@
 			min-width: 2em;
 			box-shadow: none;
 			border: none;
+			background: transparent;
 			// background: var(--b-menu-input-bgd, var(--theme-bgd-accent, #eee)) !important;
 			color: var(--b-menu-input-color, var(--theme-text));
 			font-size: 1em;
